--- a/wiinote-form/wiimote form/wiinote-form.csproj
+++ b/wiinote-form/wiimote form/wiinote-form.csproj
@@ -7,9 +7,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="WiimoteLib" Version="1.7.0" />
   </ItemGroup>
 
